--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -62,8 +62,12 @@ development-todo: # postgres TODO
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: quote_editor_test
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+  # <<: *default
+  # database: quote_editor_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
