--- a/app/Gemfile
+++ b/app/Gemfile
@@ -6,6 +6,8 @@ ruby "3.2.2"
 #gem "turbo-rails", "~> 1.0"
 gem 'foreman' # bug
 gem 'sqlite3', '~>1.7'
+#gem "simple_form", "~> 5.1.0"
+gem "simple_form" # , "~> 5.1.0"
 # Riccardo END
 
 
