--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,9 @@
 # Self link: https://console.cloud.google.com/cloud-build/triggers?hl=IT&project=palladius-genai
 # Self link: https://console.cloud.google.com/cloud-build/triggers;region=global?e=-13802955&mods=logs_tg_staging&project=palladius-genai
 #
-# Loosely inspired by ror7-tailwind-ricc-hotrails
-# and then copied at even feet from ricc-hotrails
+# Loosely inspired by ror7-tailwind-gemini-news-crawler
+# => and then copied at even feet from ../gemini-news-crawler/webapp/cloudbuild.yaml
+#
 # Securing builds: https://cloud.google.com/build/docs/securing-builds/use-secrets
 #
 # Note: to enable CB access to SecretManager, you need to click on SA permissions. Note
@@ -25,10 +26,12 @@ substitutions:
   _GCLOUD_REGION: europe-west1
   _PROJECT_ID: palladius-genai
   _APP_NAME: ricc-hotrails
-  _SKAFFOLD_DEFAULT_REPO: 'europe-west1-docker.pkg.dev/palladius-genai/ricc-hotrails'
+  #_SKAFFOLD_DEFAULT_REPO: 'europe-west1-docker.pkg.dev/palladius-genai/ricc-hotrails'
   _MESSAGGIO_OCCASIONALE: >-
     Ho provato a mettere le E2 per buildare piu veloce vediamo se va.
     Voglio anche provare a mettere dipendenze tra 4,6 e 5,7
+
+    Copied from gemini-news-crawler.
 images:
 - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails/ricc-hotrails:latest"
 - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails/ricc-hotrails:sha-$SHORT_SHA"
