--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo-rails": "^8.0.4",
     "esbuild": "^0.23.0",
     "sass": "^1.77.6"
   },
