--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -17,8 +17,12 @@ ENV RAILS_ENV="production" \
 # Throw-away build stage to reduce size of final image
 FROM base as build
 
+# riccardo: it looks like removing cmdtest is the key here: https://stackoverflow.com/questions/46013544/yarn-install-command-error-no-such-file-or-directory-install/70184799#70184799
+
+
 # Install packages needed to build gems and node modules
 RUN apt-get update -qq && \
+    apt-get remove -y cmdtest yarn && \
     apt-get install --no-install-recommends -y build-essential curl git libpq-dev libvips node-gyp pkg-config python-is-python3
 
 # Install JavaScript dependencies
@@ -27,7 +31,7 @@ ARG NODE_VERSION=22.4.0
 ARG YARN_VERSION=3.6.1
 ENV PATH=/usr/local/node/bin:$PATH
 RUN curl -sL https://github.com/nodenv/node-build/archive/master.tar.gz | tar xz -C /tmp/ && \
-    /tmp/node-build-master/bin/node-build "${NODE_VERSION}" /usr/local/node # && \
+    /tmp/node-build-master/bin/node-build "${NODE_VERSION}" /usr/local/node # &&
 
 RUN npm install -g yarn@$YARN_VERSION && \
     rm -rf /tmp/node-build-master
