--- a/quote-editor/Gemfile
+++ b/quote-editor/Gemfile
@@ -2,6 +2,16 @@ source "https://rubygems.org"
 
 ruby "3.1.2"
 
+# Riccardo START
+#gem "turbo-rails", "~> 1.0"
+#gem 'foreman' # bug
+gem 'sqlite3', '~>1.7'
+#gem "simple_form", "~> 5.1.0"
+gem "simple_form" # , "~> 5.1.0"
+#gem "turbo-rails", "~> 1.0"
+# Riccardo END
+
+
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.1.3", ">= 7.1.3.3"
 
