--- a/quote-editor/cloudbuild.yaml
+++ b/quote-editor/cloudbuild.yaml
@@ -58,7 +58,7 @@ steps:
   #id: 1. Docker Build - to CB_LATEST # might be error prone vs the one create from computer
   id:  'step1 docker build' ##1. Docker Build - to CB_LATEST # might be error prone vs the one create from computer
   args: ['build', '-t', "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails/ricc-hotrails:latest", '.']
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -71,7 +71,7 @@ steps:
     - 'tag'
     - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails/ricc-hotrails:latest"
     - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails/ricc-hotrails:sha-$SHORT_SHA"
-  dir: webapp
+  dir: quote-editor
 
 - name: 'gcr.io/cloud-builders/docker'
   #name: 3. Tag from SHA to VERSION - proviamo con Docker
@@ -82,7 +82,7 @@ steps:
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
-  dir: webapp
+  dir: quote-editor
 
 
 # Questo finalmente funge!
@@ -92,7 +92,7 @@ steps:
   args:
   - bin/cb-push-to-cloudrun-magic.sh
   - dev
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -108,7 +108,7 @@ steps:
   - bin/cb-push-to-cloudrun-magic.sh
   - prod
   allowFailure: true
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -124,7 +124,7 @@ steps:
 #   id: 6. Push DEV-OLD to Cloud run from POOR Env with DB stuff..
 #   entrypoint: bash
 #   args: [ "bin/cb-push-to-cloudrun-dev.sh" , "latest" ]
-#   dir: webapp
+#   dir: quote-editor
 #   allowFailure: true
 #   env:
 #   - 'PROJECT_ID=$PROJECT_ID'
@@ -138,7 +138,7 @@ steps:
 #   args:
 #   - bin/cb-push-to-cloudrun-prod.sh
 #   allowFailure: true
-#   dir: webapp
+#   dir: quote-editor
 #   env:
 #   - 'PROJECT_ID=$PROJECT_ID'
 #   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
