--- a/quote-editor/config/database.yml
+++ b/quote-editor/config/database.yml
@@ -94,7 +94,7 @@ production-todo:
   # database: quote_editor_production
   # username: quote_editor
   # password: <%= ENV["QUOTE_EDITOR_DATABASE_PASSWORD"] %>
-  database: <%= ENV['DATABASE_URL'] %>
+  database: "<%= ENV['DATABASE_URL'] %>"
 
 production:
   adapter: sqlite3
