--- a/quote-editor/test/fixtures/line_items.yml
+++ b/quote-editor/test/fixtures/line_items.yml
@@ -18,13 +18,13 @@ catering_today:
 room_next_week:
   line_item_date: next_week
   name: Meeting room
-  description: A cosy meeting room for 10 people
+  description: A cosy meeting room for 10 people (again)
   quantity: 1
   unit_price: 1000
 
 catering_next_week:
   line_item_date: next_week
   name: Meal tray
-  description: Our delicious meal tray
+  description: Our delicious meal tray (again)
   quantity: 10
   unit_price: 25
