--- a/quote-editor/cloudbuild.yaml
+++ b/quote-editor/cloudbuild.yaml
@@ -5,6 +5,7 @@
 #
 # Loosely inspired by ror7-tailwind-gemini-news-crawler
 # => and then copied at even feet from ../gemini-news-crawler/webapp/cloudbuild.yaml
+# => and then copied againto ../gemini-news-crawler/quote-editor/cloudbuild.yaml
 #
 # Securing builds: https://cloud.google.com/build/docs/securing-builds/use-secrets
 #
@@ -58,7 +59,7 @@ steps:
   #id: 1. Docker Build - to CB_LATEST # might be error prone vs the one create from computer
   id:  'step1 docker build' ##1. Docker Build - to CB_LATEST # might be error prone vs the one create from computer
   args: ['build', '-t', "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails-v2/ricc-hotrails-v2:latest", '.']
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -71,7 +72,7 @@ steps:
     - 'tag'
     - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails-v2/ricc-hotrails-v2:latest"
     - "${_REGION}-docker.pkg.dev/${PROJECT_ID}/ricc-hotrails-v2/ricc-hotrails-v2:sha-$SHORT_SHA"
-  dir: webapp
+  dir: quote-editor
 
 - name: 'gcr.io/cloud-builders/docker'
   #name: 3. Tag from SHA to VERSION - proviamo con Docker
@@ -82,7 +83,7 @@ steps:
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
-  dir: webapp
+  dir: quote-editor
 
 
 # Questo finalmente funge!
@@ -92,7 +93,7 @@ steps:
   args:
   - bin/cb-push-to-cloudrun-magic.sh
   - dev
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -108,7 +109,7 @@ steps:
   - bin/cb-push-to-cloudrun-magic.sh
   - prod
   allowFailure: true
-  dir: webapp
+  dir: quote-editor
   env:
   - 'PROJECT_ID=$PROJECT_ID'
   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
@@ -124,7 +125,7 @@ steps:
 #   id: 6. Push DEV-OLD to Cloud run from POOR Env with DB stuff..
 #   entrypoint: bash
 #   args: [ "bin/cb-push-to-cloudrun-dev.sh" , "latest" ]
-#   dir: webapp
+#   dir: quote-editor
 #   allowFailure: true
 #   env:
 #   - 'PROJECT_ID=$PROJECT_ID'
@@ -138,7 +139,7 @@ steps:
 #   args:
 #   - bin/cb-push-to-cloudrun-prod.sh
 #   allowFailure: true
-#   dir: webapp
+#   dir: quote-editor
 #   env:
 #   - 'PROJECT_ID=$PROJECT_ID'
 #   - 'RAILS_MASTER_KEY=$_RAILS_MASTER_KEY'
