Add MESSAGGIO_OCCASIONALE to footer and config

--- a/quote-editor/Makefile
+++ b/quote-editor/Makefile
@@ -16,8 +16,9 @@ fix-prod:
 # https://github.com/fly-apps/dockerfile-rails
 .PHONY: Dockerfile
 
+
 Dockerfile:
-#rails g dockerfile --optimistic
 # --no-lock - don't add linux platforms, set BUNDLE_DEPLOY, or --frozen-lockfile. May be needed at times to work around a rubygems bug.
-#	rails g dockerfile --optimistic --alpine --force --compose --no-lock
+
+	# This works ! Now try without nolock and activate cache
 	rails g dockerfile --optimistic --force --compose --no-lock
